--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset styles */
 * {
     margin: 0;
     padding: 0;
@@ -20,7 +19,7 @@
 }
 
 body {
-    padding-top: 60px;
+    width: 100%;
 }
 
 .navbar-left, .navbar-right {
@@ -228,16 +227,16 @@ body {
 }
 
 .gallery-item {
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 400px;
     overflow: hidden;
     cursor: pointer;
 }
 
 .gallery-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 400px;
+    height: 400px;
+    object-fit: contain;
     transition: transform 0.3s;
 }
 
@@ -563,7 +562,7 @@ body {
 .submenu-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-
+    background: white;
     padding: 20px;
 }
 
@@ -782,15 +781,16 @@ body {
     }
 }
 
-@media (max-width: 1200px) and (min-width: 768px) {
+@media (max-width: 1200px) and (min-width: 900px) {
     .dropdown-menu.show {
-        width: 200px;
+        width: 300px;
         height: 100vh;
     }
     .dropdown-submenu.open {
-        left: 200px;
+        left: 300px;
         width: 300px;
     }
+
 
     .navbar {
         padding: 20px 30px;
@@ -831,19 +831,28 @@ body {
     }
 }
 
-@media (max-width: 760px) {
-    .dropdown-menu.show {
-        width: 100vw;
+@media (max-width: 900px) {
+    .submenu .dropdown-submenu {
+        display: none;
+        position: absolute;
+        width: 100%;
         height: 100vh;
     }
+    .dropdown-menu.show {
+        width: 100%;
+        height: 100vh;
+        text-align: center;
+    }
     .dropdown-submenu.open {
-        left: 200px;
-        width: 300px;
+        top: 200px;
+        left: 0px;
+        width: 100%;
     }
     .navbar {
         flex-direction: column;
         padding: 30px 20px;
         font-size: 16px;
+        position: relative !important;
     }
 
     .navbar-left, .navbar-right {
@@ -901,7 +910,8 @@ body {
     }
 
     .photo-gallery {
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 15px;
     }
 
